src/objects/Customer_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Category1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) AND (3 OR 4) OR (5 OR 6)</booleanFilter>
            <filterItems>
                <field>Apttus_Config2__ClassificationName__c.Apttus_Config2__Type__c</field>
                <operation>equals</operation>
                <value>Offering</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__ClassificationName__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__ClassificationName__c.Name</field>
                <operation>equals</operation>
                <value>Coffee</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__ClassificationName__c.Name</field>
                <operation>equals</operation>
                <value>&amp; More</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__ClassificationName__c.Name</field>
                <operation>equals</operation>
                <value>Machines</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__ClassificationName__c.Name</field>
                <operation>equals</operation>
                <value>Tea</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipName>Partner_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Customer_Interests__c</fullName>
        <description>Master Detail for the Customer Interests</description>
        <label>Opportunity Customer Interests</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Interests</relationshipLabel>
        <relationshipName>Customer_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__ClassificationHierarchy__c.Apttus_Config2__HierarchyId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Category1__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipName>Partner_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub Sub Category</description>
        <label>Sub Sub Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__ClassificationHierarchy__c.Apttus_Config2__HierarchyId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Category1__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipName>Partner_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Interest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Customer Interest -{0000000}</displayFormat>
        <label>Customer Interest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Interest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>